@@ -1,0 +1,5 @@
+#Header files
+HEADERS += GeoImageDock.h
+
+#Source files
+SOURCES += GeoImageDock.cpp
