@@ -46,6 +46,11 @@ class TrackPoint : public MapFeature
 		double elevation() const;
 		void setElevation(double aElevation);
 
+		#ifdef GEOIMAGE
+		int getImageId() const;
+		void setImageId(int aImageId);
+		#endif
+
 		virtual void partChanged(MapFeature* F, unsigned int ChangeId);
 
 		virtual QString toXML(unsigned int lvl=0, QProgressDialog * progress=NULL);
@@ -64,6 +69,9 @@ private:
 
 		double Elevation;
 		double Speed;
+		#ifdef GEOIMAGE
+		int ImageId;
+		#endif
 };
 
 #endif
